# SingleMotor

./: .gitignore  CLAUDE.md  MIGRATION.md  README.md  SESSION.md  TODO.md  build.bat  design.md  pyproject.toml  requirements.md  run.bat  run.sh  test_plan.md
.claude/: settings.json
documents/: SDM42系列485总线电机驱动器使用说明书_摘要.md  STM系列常见问题及解决方法_摘要.md  一体化步进电机Modbus通讯手册_摘要.md
reports/: communication_layer_test_report.md  model_layer_test_report.md  params_baseline.md  service_layer_test_report.md  ui_layer_test_report.md
scripts/: config_homing_offset.py  dump_params.py  homing_and_holes.py  read_di_status.py  turn_180.py
src/nimotion/: __init__.py  main.py
src/nimotion/communication/: crc16.py  modbus_rtu.py  serial_port.py  worker.py
src/nimotion/models/: error_codes.py  registers.py  turret.py  types.py
src/nimotion/services/: home_search.py  motor_service.py
src/nimotion/ui/: connection_bar.py  integration_test_tab.py  main_window.py  modbus_tab.py  motor_alarm.py  motor_control.py  motor_params.py  motor_status.py  motor_tab.py  serial_tab.py  theme.py  turret_panel.py
src/nimotion/ui/widgets/: hex_input.py  led_indicator.py  log_viewer.py  turret_widget.py
tests/: test_alarm.py  test_clear_limit.py  test_e2e.py  test_subdivision.py
tests/test_communication/: test_crc16.py  test_modbus_rtu.py  test_serial_port.py
tests/test_models/: test_error_codes.py  test_registers.py  test_turret.py  test_types.py
tests/test_services/: test_home_search.py  test_motor_service.py
